--- a/Let'sEncrypt/01_一些概念.md
+++ b/Let'sEncrypt/01_一些概念.md
@@ -1,4 +1,11 @@
 
+https://letsencrypt.org/getting-started/
+
+To enable HTTPS on your website, you need to get a certificate (a type of file) from a Certificate Authority (CA). Let’s Encrypt is a CA. In order to get a certificate for your website’s domain from Let’s Encrypt, you have to demonstrate control over the domain. With Let’s Encrypt, you do this using software that uses the ACME protocol which typically runs on your web host.
+
+To figure out what method will work best for you, you will need to know whether you have shell access (also known as SSH access) to your web host. If you manage your website entirely through a control panel like cPanel, Plesk, or WordPress, there’s a good chance you don’t have shell access. You can ask your hosting provider to be sure.
+
+
 # 1 What services does Let’s Encrypt offer?
 Let’s Encrypt is a global Certificate Authority (CA). They let people and organizations around the world obtain, renew, and manage SSL/TLS certificates. Their certificates can be used by websites to enable secure HTTPS connections;
 
@@ -15,4 +22,11 @@ There are a large number of ACME clients available. Chances are something works 
 
 Certbot is an ACME client
 it is an easy-to-use automatic client that fetches and deploys SSL/TLS certificates for your webserver.
+
+We recommend that most people with shell access use the [Certbot](https://certbot.eff.org/ "Certbot") ACME client. It can automate certificate issuance and installation with no downtime. It also has expert modes for people who don’t want autoconfiguration. It’s easy to use, works on many operating systems, and has great documentation. [Visit the Certbot site](https://certbot.eff.org/ "Certbot") to get customized instructions for your operating system and web server.
+
+
+# 4 Wildcard Certificate 
+
+A SSL/TLS Wildcard certificate is a single certificate with a wildcard character `(*) `in the domain name field. This allows the certificate to secure multiple sub domain names (hosts) pertaining to the same base domain. For example, a wildcard certificate for `*. (domainname).com`, could be used for www.
 
