BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_02_HTTP.md
+++ b/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_02_HTTP.md
@@ -4,11 +4,11 @@
 # 1 Http use TCP 
 
 
-![](image/Pasted%20image%2020241021073237.png)
+![](../60_01_Intro/image/Pasted%20image%2020241021073237.png)
 
 
 
-![](image/Pasted%20image%2020241021073429.png)
+![](../60_01_Intro/image/Pasted%20image%2020241021073429.png)
 
 
 
@@ -16,19 +16,19 @@
 
 
 
-![](image/Pasted%20image%2020241021073527.png)
+![](../60_01_Intro/image/Pasted%20image%2020241021073527.png)
 
-![](image/Pasted%20image%2020241021073534.png)
+![](../60_01_Intro/image/Pasted%20image%2020241021073534.png)
 
 # 3 HTTP Request 
 
 ## 3.1 HTTP Request message format
 
-![](image/Pasted%20image%2020241021073735.png)
+![](../60_01_Intro/image/Pasted%20image%2020241021073735.png)
 
 
 
-![](image/Pasted%20image%2020241021073742.png)
+![](../60_01_Intro/image/Pasted%20image%2020241021073742.png)
 
 
 ## 3.2 Http request method 
