BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_01_DNS/60_02_01_00_DNS理论.md
+++ b/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_01_DNS/60_02_01_00_DNS理论.md
@@ -41,6 +41,19 @@ How DNS Recursive Resolvers Work
 
 
 
+# 4 常用的protocol 
+
+
+![](image/Pasted%20image%2020241031221026.png)
+
+
+# 5 DNS  Caching 
+
+
+
+![](image/Pasted%20image%2020241031221423.png)
+
+
 
 
 
