BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_01_DNS/60_02_01_00_DNS理论.md
+++ b/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_01_DNS/60_02_01_00_DNS理论.md
@@ -54,6 +54,10 @@ How DNS Recursive Resolvers Work
 ![](image/Pasted%20image%2020241031221423.png)
 
 
+## 5.1 TTL im DNS
 
+Im Domain Name System (DNS) gibt die TTL an, ==wie lange ein DNS-Eintrag (z. B. die Zuordnung einer Domain zu einer IP-Adresse) im Cache eines DNS-Resolvers gespeichert bleibt==, bevor er erneut abgefragt werden muss.
 
+- **Funktion**: Die TTL legt fest, wie lange eine gespeicherte Antwort als gültig angesehen wird. Nach Ablauf dieser Zeit muss der Resolver eine frische Antwort vom autoritativen DNS-Server holen.
+- **Vorteil**: Die TTL hilft, die Netzwerklast zu reduzieren, indem sie unnötige Anfragen vermeidet und die Antwortzeiten verkürzt, da DNS-Informationen eine gewisse Zeit zwischengespeichert werden können. Gleichzeitig ermöglicht eine niedrige TTL schnellere Aktualisierungen, wenn sich ein Eintrag ändert.
 
