BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_01_DNS/60_02_01_00_DNS理论.md
+++ b/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_01_DNS/60_02_01_00_DNS理论.md
@@ -3,19 +3,37 @@
 ![](image/Pasted%20image%2020241030084331.png)
 
 
+
+
+
 ![](image/Pasted%20image%2020241030084424.png)
 
 
 ![](image/Pasted%20image%2020241030084507.png)
 
-# 2 DNS name resolution
 
+
+
+
+# 2 一个完整的访问流程
+
+在一个例子   client 访问 isis.tu-berlin.de  的 query process through serveral dns server 
+
+![](image/ee99b3c2820a4fb548f541b539b7eec.jpg)
+
+# 3 DNS name resolution
+
+
+Iterative query
 ![](image/Pasted%20image%2020241030084557.png)
 
+
+recursive query 
 ![](image/Pasted%20image%2020241030084622.png)
 
 
-## 2.1 **DNS recursive resolver**  (**recursive query**)
+
+## 3.1 **DNS recursive resolver**  (**recursive query**)
 
 A **DNS recursive resolver** is a server in the Domain Name System (DNS) responsible for resolving domain names into IP addresses on behalf of the client, handling the entire lookup process across multiple DNS servers. This process is known as a **recursive query** because the resolver will recursively query other DNS servers until it finds the IP address associated with a domain or concludes the domain doesn’t exist.
 
@@ -33,7 +51,7 @@ How DNS Recursive Resolvers Work
     - The resolver caches this result and returns the IP address to the client, allowing it to connect to the website.
 
 
-# 3 DNS protocol messages
+# 4 DNS protocol messages
 
 
 ![](image/Pasted%20image%2020241030084950.png)
@@ -41,23 +59,33 @@ How DNS Recursive Resolvers Work
 
 
 
-# 4 常用的protocol 
+# 5 常用的protocol 
 
 
 ![](image/Pasted%20image%2020241031221026.png)
 
 
-# 5 DNS  Caching 
+# 6 DNS  Caching 
 
 
 
 ![](image/Pasted%20image%2020241031221423.png)
 
 
-## 5.1 TTL im DNS
+## 6.1 TTL im DNS
+
+time to live 
+
 
 Im Domain Name System (DNS) gibt die TTL an, ==wie lange ein DNS-Eintrag (z. B. die Zuordnung einer Domain zu einer IP-Adresse) im Cache eines DNS-Resolvers gespeichert bleibt==, bevor er erneut abgefragt werden muss.
 
 - **Funktion**: Die TTL legt fest, wie lange eine gespeicherte Antwort als gültig angesehen wird. Nach Ablauf dieser Zeit muss der Resolver eine frische Antwort vom autoritativen DNS-Server holen.
 - **Vorteil**: Die TTL hilft, die Netzwerklast zu reduzieren, indem sie unnötige Anfragen vermeidet und die Antwortzeiten verkürzt, da DNS-Informationen eine gewisse Zeit zwischengespeichert werden können. Gleichzeitig ermöglicht eine niedrige TTL schnellere Aktualisierungen, wenn sich ein Eintrag ändert.
+
+**Cache-Verwaltung im DNS (Domain Name System)**: In DNS-Einträgen gibt der TTL-Wert an, wie lange ein Eintrag im Cache eines DNS-Servers gespeichert bleiben darf, bevor er als veraltet angesehen wird. Ein höherer TTL-Wert sorgt für eine längere Zwischenspeicherung und geringere DNS-Anfragen, was die Ladezeiten verbessert. Ein niedrigerer Wert führt dazu, dass Änderungen an DNS-Einträgen schneller übernommen 
+werden, da die Einträge häufiger aktualisiert werden.
+
+
+
+
 
