BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_03_TransportLayer/60_03_01_TCP/60_03_01_01_TCP总览.md
+++ b/60_NetworkProtocolAndArchitectures/60_03_TransportLayer/60_03_01_TCP/60_03_01_01_TCP总览.md
@@ -8,12 +8,55 @@
 
 
 
+# 2 TCP_Congestion_Control
+## 2.1 AIMD Additive Increase Multiplicative Decrease 
+
+approach: senders can increase sending rate until packet loss (congestion) occurs, then decrease sending rate on loss event
+
+
+![](image/Pasted%20image%2020241101201639.png)
+
+
+Multiplicative decrease detail: sending rate is
+- Cut in half on loss detected by triple duplicate ACK (TCP Reno)
+- Cut to 1 MSS (maximum segment size) when loss detected by timeout (TCP Tahoe)
+
+## 2.2 TCP CUBIC
+
+![](image/Pasted%20image%2020241101201911.png)
+
+increase W as a function of the cube of the distance between current time and K
+
+![](image/Pasted%20image%2020241101202104.png)
+
+
+# 3 Parallelizing TCP Connections
+ parallel TCP connections 就是 在一个bandwidth 中 , 固定的 两方可以同时开 多个 tcp connection , 而不是只能那个开一个 
+
+
+Assume a large file transfer from a server to a client. The server splits the file into n > 1 pieces and sends the pieces in n parallel TCP connections to the host.
+(a) What is the advantage of using parallel connections for the server, rather than sending the whole file in a single TCP connection?
+The server can transmit more data over time in total 
+the sum of all window sizes of the connections
+
+If one connection experiences packet loss and decreases its window size, the others are not affected 
+
+
+(b) What is the disadvantage of using parallel connections for the server, rather than sending the whole file in a single TCP connection?
+
+bandwidth 大小是固定的
+ 在一个bandwidth 中, 固定的 两方可以同时开 多个 tcp connection , , 则会占用 很多的 资源 in bandwidth. 这样 别的 server 之间的通信 能用的 资源就少了 .  
+ 因为  默认 每个 tcp connection 占用的贷款是固定的 , 一个 bandwidth  中能容纳的 tcp connection 是有限的
 
 
 
+(c) Assume that there are other TCP connections in the network, which are not between our server and client. How does using parallel connections between our server and client impact the other TCP connections?
 
-
-
+- TCP shares resource fairly 
+- The available bandwidth is divided among all connections
+- Multiple connections means that the server has more bandwidth available in total 
+- if one user or server is using multiple parallel connections , it may dominate the available bandwidth , leaving less for others. This violate the principle of fairness in TCP congestion control 
+- This means that the band width allocation between the hosts is no longer fair 
 
 
 
