BNB23350: add files

--- a/重要命令/重要命令.md
+++ b/重要命令/重要命令.md
@@ -1,7 +1,7 @@
 
 # 1 ApplicationLayer
 
-## 1.1 Domain Name System (dig comamnd)
+## 1.1 Domain Name System 
 
 
 ### 1.1.1 two DNS recursive resolvers
@@ -57,7 +57,76 @@ search localdomain
 ```
 
 
-### 1.1.2 
+### 1.1.2 dig command 
+
+welche DNS-Server für die Domain tu.berlin, sowie deren Subdomains zuständig sind und welche TTL diese Einträge haben
+
+
+#### 1.1.2.1 使用不同的 dns-server 去query 不同类型的record 
+
+
+
+
+```
+
+yzh@BNB23350:~$ dig @192.168.1.1 www.wikipedia.org A
+
+; <<>> DiG 9.18.18-0ubuntu0.22.04.1-Ubuntu <<>> @192.168.1.1 www.wikipedia.org A
+; (1 server found)
+;; global options: +cmd
+;; Got answer:
+;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 17149
+;; flags: qr rd ra; QUERY: 1, ANSWER: 2, AUTHORITY: 0, ADDITIONAL: 1
+
+;; OPT PSEUDOSECTION:
+; EDNS: version: 0, flags:; udp: 512
+;; QUESTION SECTION:
+;www.wikipedia.org.             IN      A
+
+;; ANSWER SECTION:
+www.wikipedia.org.      19068   IN      CNAME   dyna.wikimedia.org.
+dyna.wikimedia.org.     140     IN      A       185.15.59.224
+
+;; Query time: 22 msec
+;; SERVER: 192.168.1.1#53(192.168.1.1) (UDP)
+;; WHEN: Wed Oct 30 09
+
+
+yzh@BNB23350:~$ dig @192.168.1.1 www.wikipedia.org AAAA
+
+; <<>> DiG 9.18.18-0ubuntu0.22.04.1-Ubuntu <<>> @192.168.1.1 www.wikipedia.org AAAA
+; (1 server found)
+;; global options: +cmd
+;; Got answer:
+;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 14310
+;; flags: qr rd ra; QUERY: 1, ANSWER: 2, AUTHORITY: 0, ADDITIONAL: 1
+
+;; OPT PSEUDOSECTION:
+; EDNS: version: 0, flags:; udp: 512
+;; QUESTION SECTION:
+;www.wikipedia.org.             IN      AAAA
+
+;; ANSWER SECTION:
+www.wikipedia.org.      19074   IN      CNAME   dyna.wikimedia.org.
+dyna.wikimedia.org.     300     IN      AAAA    2a02:ec80:300:ed1a::1
+
+;; Query time: 22 msec
+;; SERVER: 192.168.1.1#53(192.168.1.1) (UDP)
+;; WHEN: Wed Oct 30 09:13:38 CET 2024
+;; MSG SIZE  rcvd: 103
+
+
+
+```
+
+- **`dig`**: A command-line tool to query DNS servers and retrieve DNS records.
+- **`@192.168.1.1`**: Specifies the DNS server to query. In this case, the DNS server is at the IP address `192.168.1.1`.
+    - If you omit the `@` parameter, `dig` will use the system's default DNS server.
+- **`www.wikipedia.org`**: The domain name you are querying.
+- **`A`**: Specifies the type of DNS record to query.
+    - An `A` record maps a domain name to an IPv4 address.
+
+-----------
 
 ```
 dig @208.67.222.222 www.wikipedia.org A
@@ -82,8 +151,6 @@ dyna.wikimedia.org.     300     IN      A       185.15.59.224
 ;; SERVER: 208.67.222.222#53(208.67.222.222) (UDP)
 ;; WHEN: Wed Oct 30 09:04:02 CET 2024
 ;; MSG SIZE  rcvd: 91
-
-
 
 
 
@@ -112,58 +179,46 @@ dyna.wikimedia.org.     300     IN      AAAA    2a02:ec80:300:ed1a::1
 
 ```
 
+#### 1.1.2.2 查tu.berlin 这个Domain 的信息
 
+Die Nameserver ns.tu-berlin.de sowie dns-2.dfn.de und dns-3.dfn.de sind verantwortlich, diese Einträge sind je acht Stunden (28 800 s) gültig.
 
 
 ```
-yzh@BNB23350:~$ dig @192.168.1.1 www.wikipedia.org AAAA
-
-; <<>> DiG 9.18.18-0ubuntu0.22.04.1-Ubuntu <<>> @192.168.1.1 www.wikipedia.org AAAA
-; (1 server found)
-;; global options: +cmd
-;; Got answer:
-;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 14310
-;; flags: qr rd ra; QUERY: 1, ANSWER: 2, AUTHORITY: 0, ADDITIONAL: 1
-
-;; OPT PSEUDOSECTION:
-; EDNS: version: 0, flags:; udp: 512
-;; QUESTION SECTION:
-;www.wikipedia.org.             IN      AAAA
-
-;; ANSWER SECTION:
-www.wikipedia.org.      19074   IN      CNAME   dyna.wikimedia.org.
-dyna.wikimedia.org.     300     IN      AAAA    2a02:ec80:300:ed1a::1
-
-;; Query time: 22 msec
-;; SERVER: 192.168.1.1#53(192.168.1.1) (UDP)
-;; WHEN: Wed Oct 30 09:13:38 CET 2024
-;; MSG SIZE  rcvd: 103
-
-
-
-
-yzh@BNB23350:~$ dig @192.168.1.1 www.wikipedia.org A
-
-; <<>> DiG 9.18.18-0ubuntu0.22.04.1-Ubuntu <<>> @192.168.1.1 www.wikipedia.org A
-; (1 server found)
-;; global options: +cmd
-;; Got answer:
-;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 17149
-;; flags: qr rd ra; QUERY: 1, ANSWER: 2, AUTHORITY: 0, ADDITIONAL: 1
-
-;; OPT PSEUDOSECTION:
-; EDNS: version: 0, flags:; udp: 512
-;; QUESTION SECTION:
-;www.wikipedia.org.             IN      A
-
-;; ANSWER SECTION:
-www.wikipedia.org.      19068   IN      CNAME   dyna.wikimedia.org.
-dyna.wikimedia.org.     140     IN      A       185.15.59.224
-
-;; Query time: 22 msec
-;; SERVER: 192.168.1.1#53(192.168.1.1) (UDP)
-;; WHEN: Wed Oct 30 09
-
+11 . $ dig tu.berlin
+2
+3 ; <<>> DiG 9.18.8 <<>> tu.berlin
+4 ;; global options: +cmd
+5 ;; Got answer:
+6 ;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 65290
+7 ;; flags: qr aa rd ra; QUERY: 1, ANSWER: 1, AUTHORITY: 3, ADDITIONAL: 7
+8
+9 ;; OPT PSEUDOSECTION:
+10 ; EDNS: version: 0, flags:; udp: 1220
+11 ; COOKIE: cb6e8e1460a0a5b0c506c252637e4ee24a8fe03d5d85c7b6 (good)
+12 ;; QUESTION SECTION:
+13 ;tu.berlin. IN A
+14
+15 ;; ANSWER SECTION:
+16 tu.berlin. 28800 IN A 130.149.8.20
+17
+18 ;; AUTHORITY SECTION:
+19 tu.berlin. 28800 IN NS ns.tu-berlin.de.
+20 tu.berlin. 28800 IN NS dns-3.dfn.de.
+21 tu.berlin. 28800 IN NS dns-2.dfn.de.
+22
+23 ;; ADDITIONAL SECTION:
+24 dns-3.dfn.de. 60140 IN A 193.174.75.58
+25 dns-2.dfn.de. 60170 IN A 193.174.75.54
+26 ns.tu-berlin.de. 28800 IN A 130.149.7.7
+27 dns-3.dfn.de. 60140 IN AAAA 2001:638:d:b103::1
+28 dns-2.dfn.de. 60170 IN AAAA 2001:638:d:b102::1
+29 ns.tu-berlin.de. 28800 IN AAAA 2001:638:809:7::7
+30
+31 ;; Query time: 0 msec
+32 ;; SERVER: 130.149.7.7#53(130.149.7.7) (UDP)
+33 ;; WHEN: Wed Nov 23 17:48:31 CET 2022
+34 ;; MSG SIZE rcvd: 287
 ```
 
 
@@ -171,7 +226,7 @@ dyna.wikimedia.org.     140     IN      A       185.15.59.224
 
 Rechnernetz课程 theorie2 
 
-Die Zuordnung von Domainnamen zu IP-Adressen erfolgt im Internet mit Hilfe des Domain Name Systems (DNS). Überprüfen Sie mittels des Kommandozeilen-Tools dig (Linux/ OS X) bzw. nslookup (Windows), welche DNS-Server für die Domain tu.berlin sowie deren Subdomains zuständig sind und welche TTL diese Einträge haben.
+Die Zuordnung von Domainnamen zu IP-Adressen erfolgt im Internet mit Hilfe des Domain Name Systems (DNS). Überprüfen Sie mittels des Kommandozeilen-Tools dig (Linux/ OS X) bzw. nslookup (Windows), ==welche DNS-Server für die Domain tu.berlin sowie deren Subdomains zuständig sind und welche TTL diese Einträge haben==.
 
 ```
  ⚡ 🦄  nslookup -type=NS tu.berlin
@@ -198,7 +253,6 @@ https://www.tu.berlin/campusmanagement/angebot/netzwerk-an-der-tu/ip-und-dns-ver
 
 - primärer Nameserver 130.149.7.7 (ns.tu-berlin.de)
 - externer, sekundärer Nameserver: 192.129.31.50 (res-1.dfn.de)
-
 
 
 
@@ -387,7 +441,20 @@ Connection: keep-alive   # 就是设置成这样
 
 ## 2.1 iperf3 (like ping )
 
-Kommando `iperf3 -c [HOSTNAME]` um mit dem iperf3 Programm den Durchsatz von ihrem Rechner zu dem oben gewählten Server über Streaming-Sockets zu messen.
+
+`iperf3` operates in a **client-server architecture**:
+- **Server mode**: Waits for incoming connections.
+- **Client mode**: Sends data to the server for testing.
+
+
+After running a test, `iperf3` provides detailed statistics:
+- **Bandwidth**: Amount of data transmitted per second (e.g., `500 Mbps`).
+- **Packet Loss (UDP)**: Indicates the number of lost packets.
+- **Latency (UDP)**: Displays the delay in milliseconds.
+
+
+
+The `iperf3` command is a widely used tool to measure and analyze network performance. It is particularly useful for testing bandwidth, latency, and packet loss between two devices. 
 
 **Iperf3** is a widely used open-source tool for network performance measurement and tuning. It allows users to measure the bandwidth, loss, jitter, and other aspects of TCP and UDP connections between two devices over a network.
 
@@ -418,18 +485,97 @@ Connecting to host <server-ip>, port 5201
 ```
 
 
+## 2.2 **Start the Server**
+
+```
+iperf3 -s
+```
+
+- `-s`: Starts `iperf3` in server mode.
+- By default, the server listens on port `5201`.
+
+Optional:
+- Specify a different port:  `iperf3 -s -p 12345`
+
+## 2.3 **Run the Client**
+
+`iperf3 -c <server_ip>`
+- `-c <server_ip>`: Specifies the IP address or hostname of the server.
+- By default, the client connects to port `5201`.
+
+`iperf3 -c 192.168.1.10`
+
+## 2.4 `iperf3 -c www.google.com` will not work  是没有效果的 
+
+1. **`iperf3` Requires a Compatible Server**:
+    - `iperf3` operates in a **client-server architecture**, ==where a server must run `iperf3` in server mode (`iperf3 -s`) to accept connections from a client.==
+    - Google does not run an `iperf3` server at `www.google.com` or any of its public IPs. They only host web services, not network performance testing services.
+2. **Unmatched Protocols**:
+    - `iperf3` uses its own protocol to test network performance. If the target server doesn't understand this protocol, the connection will fail.
 
 
-## 2.2 Netcat (nc)
 
-==Das Programm netcat (kurz nc) ist ein einfaches Netzwerkprogramm, das eine Verbindung zu einem entfernten Server aufbaut und die Eingabe von stdin über das Netzwerk an den entfernten Server sendet. ==
-Das Programm kann auch als Server fungieren, wobei auf eingehende Verbindungen gewartet wird und alle empfangenen Daten nach stdout geschrieben werden. 
-Netcat ist deshalb gut geeignet, um die eigene Implementierung von einfachen Netzwerkprotokollen zu testen. 
+# 3 Netcat (nc)
+
+nc
+发送一个 request 到 entfernt Server 
+request content 直接写在命令里面 
+
+Das Programm netcat (kurz nc) ist ein einfaches Netzwerkprogramm, das eine Verbindung zu einem entfernten Server aufbaut und die Eingabe von stdin über das Netzwerk an den entfernten Server sendet. 
+Das Programm kann auch als Server fungieren, wobei auf eingehende Verbindungen gewartet wird und alle empfangenen Daten nach stdout geschrieben werden. Netcat ist deshalb gut geeignet, um die eigene Implementierung von einfachen Netzwerkprotokollen zu testen. 
 
 Probieren Sie deshalb die folgenden Anwendungsbeispiele aus:
-Benutzen Sie das nc Kommandozeilen-Programm und rufen Sie eine Webseite auf der Konsole ab. Beispiel:
+Benutzen Sie das nc Kommandozeilen-Programm und rufen Sie eine Webseite auf der Konsole ab. 
+
+
+---
+
 ```
 echo -n -e "GET / HTTP/1.1\r\n\
 Host: whatismyip.akamai.com\r\n\
 Connection: close\r\n\r\n" | nc whatismyip.akamai.com 80
 ```
+
+
+| 是一个 pipe 
+
+cmd 1 | cmd 2
+stdout of cmd1 ist stdin of cmd2 
+
+- **`echo -n -e`**:
+    - `-n`: Verhindert, dass ein Zeilenumbruch am Ende der Ausgabe hinzugefügt wird.
+    - `-e`: Ermöglicht die Interpretation von Escape-Sequenzen (z. B. `\r`, `\n`).
+- **`"GET / HTTP/1.1\r\nHost: whatismyip.akamai.com\r\nConnection: close\r\n\r\n"`**:
+    - Baut die HTTP-GET-Anfrage zusammen:
+        - `GET / HTTP/1.1`: Fordert die Root-Resource `/` mit HTTP/1.1 an.
+        - `Host: whatismyip.akamai.com`: Gibt den Zielhost an.
+        - `Connection: close`: Signalisiert, dass die Verbindung nach der Antwort geschlossen werden soll.
+            - ==expizit angegeben, ansonsten wird das Connection nicht automatische geschlossen== 
+        - `\r\n`: Signalisiert das Ende einer Zeile im HTTP-Protokoll.
+        - Doppeltes `\r\n` markiert das Ende des Header-Blocks.
+- **`| nc whatismyip.akamai.com 80`**:
+    - Der Pipe-Operator (`|`) leitet die Ausgabe des `echo`-Kommandos an `nc` (netcat) weiter.
+    - `nc whatismyip.akamai.com 80`: Stellt eine TCP-Verbindung zu `whatismyip.akamai.com` auf Port 80 her und sendet die Anfrage.
+
+
+---
+
+
+```
+yzh@BNB23350:~$ echo -n -e "GET / HTTP/1.1\r\n\
+Host: whatismyip.akamai.com\r\n\
+Connection: close\r\n\r\n" | nc whatismyip.akamai.com 80
+
+
+下面的是得到的response 
+HTTP/1.1 200 OK
+Content-Type: text/html
+Content-Length: 13
+Expires: Tue, 26 Nov 2024 19:44:36 GMT
+Cache-Control: max-age=0, no-cache, no-store
+Pragma: no-cache
+Date: Tue, 26 Nov 2024 19:44:36 GMT
+Connection: close
+```
+
+
