BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_01_Intro/60_01_02_不同层级的区别.md
+++ b/60_NetworkProtocolAndArchitectures/60_01_Intro/60_01_02_不同层级的区别.md
@@ -1,4 +1,5 @@
 
+> data (http, application layer ) -> segment (tcp, transport layer ) - > datagram  (ip, network layer )  -> frame  (mac , link layer )
 
 - Network Layer - Transfer bits and bytes
     - IP (Internet Protocol): Transfer bytes. Unreliable.
