BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_04_Network_Layer/60_04_03_NAT.md
+++ b/60_NetworkProtocolAndArchitectures/60_04_Network_Layer/60_04_03_NAT.md
@@ -1,9 +1,9 @@
 
 
-# NAT_Network_Address_Translation
+# 1 NAT_Network_Address_Translation
 
 中间是 Router 
-Route的左右两侧 都有一个ip addresse 
+Router的左右两侧 都有一个ip addresse 
 
 ![](image/Pasted%20image%2020241112194549.png)
 
@@ -18,7 +18,7 @@ advantages:
 
 
 
-## 1 implementation:
+## 1.1 implementation:
 
 NAT router must (transparently):
 - outgoing datagrams: replace (source IP address, port #) of every outgoing datagram to (NAT IP address, new port #)
