--- a/60_NetworkProtocolAndArchitectures/60_05_Link_Layer/60_05_01_总览.md
+++ b/60_NetworkProtocolAndArchitectures/60_05_Link_Layer/60_05_01_总览.md
@@ -1,4 +1,15 @@
 
+- principles behind data link layer services:
+    - error detection, correction
+    - sharing a broadcast channel: multiple access
+    - link layer addressing
+- instantiation, implementation of various link layer technologies
+    - Ethernet
+    - switched LANS, VLANs
+    - virtualized networks as a link layer: MPLS
+
+
+
 # 1 总览 
 
 understand principles behind link layer services:
