BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_01_Intro/60_01_01_重要概念.md
+++ b/60_NetworkProtocolAndArchitectures/60_01_Intro/60_01_01_重要概念.md
@@ -92,8 +92,20 @@ mapping from IP address to MAC address: ==Address Resolution Protocol (ARP)==
 
 
 - Protocol encapsulation wraps data with protocol-specific information as it moves through the protocol layers of a network model like TCP/IP
-- Each layer adds its own header with control information to fulfi ll the functions of the respective layer, while the protocol data unit (message, segment, packet,...) of the next higher level goes to the body
+- Each layer adds its own header with control information to fulfill the functions of the respective layer, while the protocol data unit (message, segment, packet,...) of the next higher level goes to the body
 - At the receiving end, this process is reversed (called decapsulation) to extract the original data
+
+
+---
+
+Transport layer sends segments (TPDU=Transport Protocol Data Unit) in packets (in frames)
+
+![](image/Pasted%20image%2020241205230332.png)
+
+
+
+---
+
 
 ![](image/Pasted%20image%2020241201000718.png)
 
