BNB23350: add files

--- a/61_RechnernetzUndVerteilteSystem/61_01_Tutorium/61_01_01theorie3_讲解.md
+++ b/61_RechnernetzUndVerteilteSystem/61_01_Tutorium/61_01_01theorie3_讲解.md
@@ -26,7 +26,7 @@ Post ist nicht idempotent, da immer Daten hangen, nicht ersetzten
 ## 1.3 Was sind persistent und nicht-persistente Verbindungen? 
 
 persistent : Verbindung bleibt nach anfrage bestehen 
-nicht persistent : server schliesst Verbinding nachdem er Antwort empfangen habt.   Neue Request , setzen eine neuer verbidnungsaufbau 
+nicht persistent : server schließt Verbinding, nachdem er Antwort empfangen habt.   Neue Request , setzen eine neuer verbidnungsaufbau 
 
 
 ## 1.4 HTTP ist ein zustandsloses Protokoll. Was bedeutet das? Mit welcher Technik können Server z.B. trotzdem den Warenkorb einer Nutzers speichern?
@@ -118,6 +118,22 @@ Vorteil:
 - jeder ist eine gleichwertiger Peer
     - Peer kann Services anbieten und anfrage
 
+Vorteile:
+- Lastverteilung auf mehrere Geräte mgl.
+- Clients können auf die Dienste des Servers aus Entfernung zugreifen
+- Client und Server können separat entworfen werden
+- Einfaches, wohlbekanntes Programmierparadigma: Funktionsaufruf
+- Auf den Server kann gleichzeitig von mehreren Clients zugegriffen werden
+- Einfache Ermöglichung der Modifikation des Servers
+
+Nachteile:
+- Server kann Engpass werden
+- Signifikante Latenz der Kommunikation möglich
+- Ressourcen (z.B. Festplattenplatz) der Clients werden evtl. verschwende
+- Finden des Servers für einen bestimmten Service nicht trivial
+- Der Service kann deaktiviert sein wenn ein Server ausfällt
+
+
 
 # 4 Iperf
 
@@ -145,7 +161,7 @@ After running a test, `iperf3` provides detailed statistics:
 - **Packet Loss (UDP)**: Indicates the number of lost packets.
 - **Latency (UDP)**: Displays the delay in milliseconds.
 
-## 4.2 **Start the Server**
+## 4.2 **Start the Server** on a server 
 
 ```
 iperf3 -s
@@ -157,7 +173,7 @@ iperf3 -s
 Optional:
 - Specify a different port:  `iperf3 -s -p 12345`
 
-## 4.3 **Run the Client**
+## 4.3 **Run the Client** on another server 
 
 `iperf3 -c <server_ip>`
 - `-c <server_ip>`: Specifies the IP address or hostname of the server.
