--- a/重要命令/重要命令.md
+++ b/重要命令/重要命令.md
@@ -269,6 +269,51 @@ Address:  141.23.73.70
 ```
 
 
+----
+
+Die Nameserver ns.tu-berlin.de sowie dns-2.dfn.de und dns-3.dfn.de sind verantwortlich, diese Einträge sind je acht Stunden (28 800 s) gültig.
+
+```
+11 . $ dig tu.berlin
+2
+3 ; <<>> DiG 9.18.8 <<>> tu.berlin
+4 ;; global options: +cmd
+5 ;; Got answer:
+6 ;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 65290
+7 ;; flags: qr aa rd ra; QUERY: 1, ANSWER: 1, AUTHORITY: 3, ADDITIONAL: 7
+8
+9 ;; OPT PSEUDOSECTION:
+10 ; EDNS: version: 0, flags:; udp: 1220
+11 ; COOKIE: cb6e8e1460a0a5b0c506c252637e4ee24a8fe03d5d85c7b6 (good)
+12 ;; QUESTION SECTION:
+13 ;tu.berlin. IN A
+14
+15 ;; ANSWER SECTION:
+16 tu.berlin. 28800 IN A 130.149.8.20
+17
+18 ;; AUTHORITY SECTION:
+19 tu.berlin. 28800 IN NS ns.tu-berlin.de.
+20 tu.berlin. 28800 IN NS dns-3.dfn.de.
+21 tu.berlin. 28800 IN NS dns-2.dfn.de.
+22
+23 ;; ADDITIONAL SECTION:
+24 dns-3.dfn.de. 60140 IN A 193.174.75.58
+25 dns-2.dfn.de. 60170 IN A 193.174.75.54
+26 ns.tu-berlin.de. 28800 IN A 130.149.7.7
+27 dns-3.dfn.de. 60140 IN AAAA 2001:638:d:b103::1
+28 dns-2.dfn.de. 60170 IN AAAA 2001:638:d:b102::1
+29 ns.tu-berlin.de. 28800 IN AAAA 2001:638:809:7::7
+30
+31 ;; Query time: 0 msec
+32 ;; SERVER: 130.149.7.7#53(130.149.7.7) (UDP)
+33 ;; WHEN: Wed Nov 23 17:48:31 CET 2022
+34 ;; MSG SIZE rcvd: 287
+```
+
+
+
+
+
 ## 1.2 HTTP (telnet command)
 
 
@@ -485,7 +530,7 @@ Connecting to host <server-ip>, port 5201
 ```
 
 
-## 2.2 **Start the Server**
+## 2.2 **Start the Server**  on a server 
 
 ```
 iperf3 -s
@@ -497,7 +542,7 @@ iperf3 -s
 Optional:
 - Specify a different port:  `iperf3 -s -p 12345`
 
-## 2.3 **Run the Client**
+## 2.3 **Run the Client** on another server 
 
 `iperf3 -c <server_ip>`
 - `-c <server_ip>`: Specifies the IP address or hostname of the server.
@@ -515,14 +560,17 @@ Optional:
 
 
 
+
 # 3 Netcat (nc)
 
 nc
 发送一个 request 到 entfernt Server 
 request content 直接写在命令里面 
 
-Das Programm netcat (kurz nc) ist ein einfaches Netzwerkprogramm, das eine Verbindung zu einem entfernten Server aufbaut und die Eingabe von stdin über das Netzwerk an den entfernten Server sendet. 
-Das Programm kann auch als Server fungieren, wobei auf eingehende Verbindungen gewartet wird und alle empfangenen Daten nach stdout geschrieben werden. Netcat ist deshalb gut geeignet, um die eigene Implementierung von einfachen Netzwerkprotokollen zu testen. 
+Das Programm netcat (kurz nc) ist ein einfaches Netzwerkprogramm, das eine Verbindung zu einem entfernten Server aufbaut und ==die Eingabe von stdin über das Netzwerk an den entfernten Server sendet. ==
+Das Programm kann auch als Server fungieren, wobei auf eingehende Verbindungen gewartet wird ==und alle empfangenen Daten nach stdout geschrieben werden==. 
+
+Netcat ist deshalb gut geeignet, um die eigene Implementierung von einfachen Netzwerkprotokollen zu testen. 
 
 Probieren Sie deshalb die folgenden Anwendungsbeispiele aus:
 Benutzen Sie das nc Kommandozeilen-Programm und rufen Sie eine Webseite auf der Konsole ab. 
