BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_01_Intro/60_01_01_重要概念.md
+++ b/60_NetworkProtocolAndArchitectures/60_01_Intro/60_01_01_重要概念.md
@@ -1,10 +1,19 @@
 
-# 1 Model
+# 1 DAS ISO/OSI REFERENZMODELL
+
+![](image/Pasted%20image%2020250106124034.png)
 
 ![](image/Pasted%20image%2020241031220138.png)
 
 为什么中间两层 还要上升到 network layer , 不直接通过 physical layer 传输 
 因为 要通过 network layer 实现 routing 
+
+
+- (Theoretisches) Modell aus sieben **_Protokollschichten_** (**_Protocol Layers_**) mit jeweils begrenzten Aufgaben
+- Definiert von der **_International Organization for Standardization_** (**ISO**) der Gruppe **_Open Systems Interconnection_** (**OSI**), erstmals 1977
+- Ziel: Beherrschung der Komplexität durch Protokolle auf verschiedenen Schichten
+- Prinzip: Schicht `**n**` nutzt Dienste der Schicht `**n-1**` und stellt der Schicht `**n+1**` Dienste bereit
+- Instanzen einer Schicht kommunizieren mit Instanzen der gleichen Schicht auf der Gegenseite
 
 
 The OSI (Open Systems Interconnection) Reference Model
@@ -55,7 +64,40 @@ Application Layer
 - Provides network service directly to applications
 
 
-# 2 Protocol 
+# 2 Das TCP/IP-Modell
+
+![](image/Pasted%20image%2020250106124309.png)
+
+- ISO/OSI-Referenzmodell dient lediglich als Modell für konzeptionelle Betrachtungen der Datenkommunikation hat kaum praktische Relevanz
+- **_TCP/IP-Modell_**: in der Praxis als De-Facto-Standard etabliertes und akzeptiertes Modell
+
+Host-to-Network Layer
+- **_Bitübertragungsschicht_**: Übertragung von Bits über ein Kommunikationsmedium (lokales Netz) durch Manipulation von Signalen in Abhängigkeit der zu übertragenden Bits (**_Modulation_** beim Sender) bzw. Erzeugung von Bits abhängig von den empfangenen Signalen (**_Demodulation_** beim Empfänger)
+- **_Sicherungsschicht_**: Aufteilung des Datenstroms in **_Rahmen_** (**_Frames_**) und Steuerung des Medienzugriffs sowie Fehlererkennung und -korrektur 
+- Beispiele: IEEE 802.3 (Ethernet) , IEEE 802.11 (WLAN), Digital Subscriber Line (DSL), LTE Air Interface
+
+Network Layer
+- Kommunikation zwischen Rechnern die an verschiedenen lokalen Netzen angeschlossen sind
+- **_Wegewahl_** (Routing) und _**Adressierung**_
+- **_Paket_**- statt **_Leitungsvermittlung_**: Daten werden in mehreren Paketen übertragen, die über unterschiedliche Wege zum Empfänger gelangen
+
+
+Transport Layer
+- Erweiterung der Basisfunktionen der Vermittlungsschicht
+- Erstes Schicht die ausschließlich Ende-zu-Ende arbeitet, d.h. es gib in der Regel keine Protokollinstanzen im Netz
+- **_Transmission Control Protocol_** (_**TCP**_):  zuverlässiges, verbindungsorientiertes Protokoll zur fehlerfreien Ende-zu-Ende-Übertragung eines Datenstroms
+- **_User Datagram Protocol_** (_**UDP**_): "unzuverlässiges", verbindungsloses Protokoll zur schnellen, aber unzuverlässigen Ende-zu-Ende-Kommunikation
+- _**QUIC**_ (ehemals für _**Quick UDP Internet Connections**_): neues Multiplex-Protokoll zur Einrichtung mehrerer Ende-zu-Ende-Verbindungen basierend auf UDP
+
+Application Layer
+- Protokollschicht für bestimmte Anwendungen
+- Ermöglicht Aufbau, Aufrechterhalten und Abbau von Sitzungen
+- Verhandlung über Syntax und Semantik der ausgetauschten Daten
+- **_Sitzung_**: zeitlich begrenztes Verhältnis mit definiertem Zustand zwischen verteilten Anwendungen, inklusive Wiedererkennung des Kommunikationspartners und Synchronisation
+- Beispiele: **_HyperText Transfer Protocol_** (_**HTTP**_), _**File Transfer Protocol**_ (_**FTP**_), _**Simple Mail Transfer Protocol**_ (_**SMTP**_), _**Domain Name System**_ (_**DNS**_)
+
+
+# 3 Protocol 
 
 - Network Layer - Transfer bits and bytes
     - IP (Internet Protocol): Transfer bytes. Unreliable.
@@ -87,10 +129,14 @@ mapping from IP address to MAC address: ==Address Resolution Protocol (ARP)==
 
 ----
 
-# 3 PROTOCOL ENCAPSULTATION
+# 4 Package  ENCAPSULTATION
 
 > Message (http, application layer ) -> segment/datagram (tcp, transport layer ) - > Packet  (ip, network layer )  -> frame  (mac , link layer )
 
+- HTTP-_Nachrichten_ werden in TCP-_Segmente_ gekapselt
+- TCP-Segment werden in IP-_Pakete_ gekapselt
+- IP-Pakete werden in _Rahmen_ (_Frames_) des Host-to-Network-Layer gekapselt (nicht in der Abbildung) 
+- Nachrichten, Segmente, Pakete und Rahmen sind spezifische, schichtenabhängige Bezeichnungen für PDUs
 
 ![](image/Pasted%20image%2020241201000351.png)
 
@@ -98,6 +144,10 @@ mapping from IP address to MAC address: ==Address Resolution Protocol (ARP)==
 - Protocol encapsulation wraps data with protocol-specific information as it moves through the protocol layers of a network model like TCP/IP
 - Each layer adds its own header with control information to fulfill the functions of the respective layer, while the protocol data unit (message, segment, packet,...) of the next higher level goes to the body
 - At the receiving end, this process is reversed (called decapsulation) to extract the original data
+
+- Protokolle auf jeder Schicht übertragen Daten in Blöcken, sogenannten **_Protocol Data Units_** (_**PDUs**_)
+- Schichtung manifestiert sich in der **_Kapselung_** von PDUs: PDUs der Schicht `**n**` werden in PDUs der Schicht `**n-1**` eingepackt
+- PDUs auf jeder Schicht bestehen aus aus einem **_Header_**, der Kontroll- und Steuerinformationen enthält, und einem **_Body_**, der die Nutzdaten enthält
 
 
 ---
@@ -108,8 +158,7 @@ Transport layer sends segments (TPDU=Transport Protocol Data Unit) in packets (i
 
 
 
----
-
+## 4.1 Header 
 
 ![](image/Pasted%20image%2020241201000718.png)
 
