--- a/60_NetworkProtocolAndArchitectures/60_03_TransportLayer/60_03_04_TCP细节.md
+++ b/60_NetworkProtocolAndArchitectures/60_03_TransportLayer/60_03_04_TCP细节.md
@@ -5,6 +5,16 @@
 •数据包都有序号Sequence，对方收到则发送ACK确认，未收到则重传；
 •使用检验和来检验数据传输过程中是否有误；
 
+- **_Ende-zu-Ende-Transportprotokoll_** im Internet
+- **_Zuverlässig_**, **_verbindungsorientiert_**, **_paketvermittelt_**
+- **_Bidirektional_**, d.h. Übertragung in beide Richtungen
+- **_Flusskontrolle_** vermeidet Überlastung des Empfängers
+- **_Staukontrolle_** drosselt die Übertragung bei (angeblicher) Überlastung des Netzes
+- **_Fehlerkontrolle_** ermöglicht Wiederübertragung bei fehlerhaften oder verlorenen Segmenten 
+- Sender: Unterteilt den eingehenden Datenstrom auf mehrere Segmente und übergibt sie der Internetschicht
+- Empfänger: Setzt die eingehenden Segmente in der ursprünglichen Reihenfolge zu einem Ausgabestrom zusammen und übergibt ihn der Anwendungsschicht
+
+
 - point-to-point:
     - one sender, one receiver
 - reliable, in-order byte steam:
